# capstone-hillside-hidden-resort

./: .gitignore  DEFENSE_TALK_TRACK.md  PROJECT_ALIGNMENT.md  PROJECT_OVERVIEW.md  README.md  netlify.toml  package-lock.json  package.json  render.yaml
hillside-ai/: README.md  pyproject.toml
hillside-ai/app/: __init__.py  main.py
hillside-api/: .env.example  README.md  pyproject.toml
hillside-api/app/: __init__.py  main.py
hillside-api/app/api/: __init__.py
hillside-api/app/core/: __init__.py  auth.py  cache.py  chains.py  config.py  qr_security.py  rate_limit.py  status.py
hillside-api/app/integrations/: ai_pricing.py  escrow_chain.py  guest_pass_chain.py  supabase_client.py
hillside-api/app/middleware/: correlation.py  performance.py
hillside-api/app/observability/: __init__.py  escrow_reconciliation_monitor.py  no_show_scheduler.py  notification_retention_scheduler.py  (+3 more)
hillside-api/scripts/: escrow_backfill.py  escrow_diag.py  escrow_preflight.py  escrow_smoke.py
hillside-api/tests/: test_ops_notifications.py  test_services_idempotency.py  test_v2_ai_contract.py  test_v2_ai_route_helpers.py  test_v2_auth_contract.py  test_v2_chain_config_contract.py  test_v2_checkin_flow_contract.py  test_v2_dashboard_contract.py  test_v2_error_envelope_contract.py  test_v2_error_mapping.py  test_v2_escrow_contract.py  test_v2_me_bookings_contract.py  test_v2_me_contract.py  test_v2_payments_contract.py  test_v2_qr_operations_contract.py  test_v2_reports_contract.py  test_v2_reservations_contract.py  test_v2_sync_contract.py  test_v2_units_contract.py
(+634 files in other folders)
