[project]
name = "hillside-ai"
version = "0.1.0"
description = "AI pricing inference service for Hillside V2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "scikit-learn>=1.5.2",
  "prophet>=1.1.6",
  "pandas>=2.2.0"
]
