[project]
name = "hillside-api"
version = "0.1.0"
description = "FastAPI domain facade for Hillside V2 migration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "supabase>=2.11.0",
  "web3>=7.8.0",
  "scikit-learn>=1.5.2",
  "prophet>=1.1.6",
  "pandas>=2.2.0",
  "cryptography>=43.0.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0"
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
